--- a/access.css
+++ b/access.css
@@ -634,7 +634,7 @@ section {
     display: block; /* Display the options on smaller screens */
   }
   
-  .navbar .logo,
+  ,
   .navbar .links {
     display: none; /* Hide the logo and other links on smaller screens */
   }
